--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -79,9 +79,10 @@
                     <a href="javascript:;">第三方设置</a>
                     <dl class="layui-nav-child">
                         <dd><a href="javascript:;" menuid="800" menuurl='<iframe src="/platform/live/list" width="100%" height="1080px;" frameborder="0"></iframe>'>直播管理</a></dd>
-                        <dd><a href="javascript:;" menuid="801" menuurl='<iframe src="/platform/problem/list" width="100%" height="1080px;" frameborder="0"></iframe>'>蜂鸟地图管理</a></dd>
-                        <dd><a href="javascript:;" menuid="802" menuurl='<iframe src="/platform/problem/list" width="100%" height="1080px;" frameborder="0"></iframe>'>短信验证管理</a></dd>
-                        <dd><a href="javascript:;" menuid="803" menuurl='<iframe src="/platform/problem/list" width="100%" height="1080px;" frameborder="0"></iframe>'>推送信息管理</a></dd>
+                        <dd><a href="javascript:;" menuid="801" menuurl='<iframe src="/platform/stationinfo/list" width="100%" height="1080px;" frameborder="0"></iframe>'>站内信管理</a></dd>
+                        <dd><a href="javascript:;" menuid="802" menuurl='<iframe src="/platform/problem/list" width="100%" height="1080px;" frameborder="0"></iframe>'>精彩图集上传</a></dd>
+                        <!--                        <dd><a href="javascript:;" menuid="802" menuurl='<iframe src="/platform/problem/list" width="100%" height="1080px;" frameborder="0"></iframe>'>蜂鸟地图管理</a></dd>-->
+
                     </dl>
                 </li>
             </ul>
