--- a/src/main/resources/templates/stationinfo/input.html
+++ b/src/main/resources/templates/stationinfo/input.html
@@ -5,11 +5,46 @@
     <div class="layui-container">
         <div class="layui-row" style="margin-top: 10px;">
             <div class="layui-col-xs12 layui-col-sm12 layui-col-md12">
-                <form class="layui-form" th:object="${crmRole}">
+                <form class="layui-form" th:object="${stationinfo}">
                     <div class="layui-form-item">
-                        <label class="layui-form-label">名称</label>
+                        <label class="layui-form-label">通知标题</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{name}" required  lay-verify="required" placeholder="请输入名称" autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{notificationTitle}" required  lay-verify="required" placeholder="请输入名称" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">消息标题</label>
+                        <div class="layui-input-block">
+                            <input type="text" th:field="*{msgTitle}" required  lay-verify="required" placeholder="请输入名称" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">消息类型</label>
+                        <div class="layui-input-block">
+                            <select name="sendtype" required  lay-verify="required">
+                                <option value="">请选择</option>
+                                <option value="1" th:selected="${stationinfo.sendtype == 1}">安卓</option>
+                                <option value="2" th:selected="${stationinfo.sendtype == 2}">IOS</option>
+                                <option value="3" th:selected="${stationinfo.sendtype == 3}">全部</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">通知内容</label>
+                        <div class="layui-input-block">
+                            <input type="text" th:field="*{msgContent}" required  lay-verify="required" placeholder="请输入名称" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">设备标识</label>
+                        <div class="layui-input-block">
+                            <input type="text" th:field="*{registrationId}" required  lay-verify="required" placeholder="请输入名称" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">别名</label>
+                        <div class="layui-input-block">
+                            <input type="text" th:field="*{bieming}" required  lay-verify="required" placeholder="请输入名称" autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <input th:field="*{id}" type="hidden"/>
@@ -26,7 +61,7 @@
             $ = layui.jquery;
 
             form.on('submit(submitFrom)', function(data){
-                var resultData = core.ajax('/crmRole/saveOrUpdate',false,'POST',data.field);
+                var resultData = core.ajax('/platform/stationinfo/saveOrUpdate',false,'POST',data.field);
                 if(resultData!=false){
                     parent.layer.msg('操作成功',core.showtime);
                     var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
