--- a/src/main/resources/templates/stationinfo/input.html
+++ b/src/main/resources/templates/stationinfo/input.html
@@ -32,22 +32,39 @@
                     <div class="layui-form-item">
                         <label class="layui-form-label">通知内容</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{msgContent}" required  lay-verify="required" placeholder="请输入名称" autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{msgContent}" required  lay-verify="required" placeholder="通知内容" autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item">
                         <label class="layui-form-label">设备标识</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{registrationId}" required  lay-verify="required" placeholder="请输入名称" autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{registrationId}" required  lay-verify="required" placeholder="设备标识" autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item">
                         <label class="layui-form-label">别名</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{bieming}" required  lay-verify="required" placeholder="请输入名称" autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{bieming}" required  lay-verify="required" placeholder="别名" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">图片地址</label>
+                        <div class="layui-upload">
+                            <button type="button" class="layui-btn" id="test2">上传图片</button>
+                            <div class="layui-upload-list">
+                                <img class="layui-upload-img" id="demo1" th:src="*{imgurl}">
+                                <p id="demoText"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">消息url</label>
+                        <div class="layui-input-block">
+                            <input type="text" th:field="*{url}" required  lay-verify="required" placeholder="消息url" autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <input th:field="*{id}" type="hidden"/>
+                    <input th:field="*{imgurl}" type="hidden" id="imgurl"/>
                     <button lay-submit lay-filter="submitFrom" style="display: none;">提交</button>
                 </form>
             </div>
@@ -58,6 +75,7 @@
         layui.use('core', function(){
             var form = layui.form,
             core = layui.core,
+                upload = layui.upload,
             $ = layui.jquery;
 
             form.on('submit(submitFrom)', function(data){
@@ -68,6 +86,29 @@
                     parent.layer.close(index); //再执行关闭
                 }
                 return false; //阻止表单跳转。如果需要表单跳转，去掉这段即可。
+            });
+
+            //普通图片上传
+            var uploadInst = upload.render({
+                elem: '#test2'
+                , url: '/api/upLoadByHttp?remarks=' + 3 //改成您自己的上传接口
+                , before: function (obj) {
+                    //预读本地文件示例，不支持ie8
+                    obj.preview(function (index, file, result) {
+                        $('#demo1').attr('src', result); //图片链接（base64）
+                    });
+                }
+                , done: function (res) {
+                    //如果上传失败
+                    if (res.code != 200) {
+                        return layer.msg('上传失败');
+                    }
+                    if (res.code == 200) {
+                        $('#imgurl').val(res.data[0].url);
+                        return layer.msg('上传成功！');
+                    }
+                    //上传成功
+                }
             });
         });
     </script>
