--- a/src/main/resources/templates/exhibitioninfo/input2.html
+++ b/src/main/resources/templates/exhibitioninfo/input2.html
@@ -9,55 +9,55 @@
                     <div class="layui-form-item">
                         <label class="layui-form-label">注册手机</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{phone}" required  autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{phone}" lay-verify="required"  autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item">
                         <label class="layui-form-label">邮箱</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{mailbox}" required  autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{mailbox}" lay-verify="required"  autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item">
                         <label class="layui-form-label">管理人员</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{name}" required  autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{name}" lay-verify="required"  autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item">
                         <label class="layui-form-label">身份证</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{idcard}" required  autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{idcard}" lay-verify="required"  autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item">
                         <label class="layui-form-label">座机</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{tel}" required  autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{tel}" lay-verify="required"  autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item">
                         <label class="layui-form-label">企业名称</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{enterprisename}" required autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{enterprisename}" lay-verify="required" autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item">
                         <label class="layui-form-label">展位号</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{boothno}" required  autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{boothno}" lay-verify="required"  autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item">
                         <label class="layui-form-label">蜂鸟云地图Fid</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{fid}" required  autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{fid}" lay-verify="required"  autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item">
                         <label class="layui-form-label">虚拟展厅html地址</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{halurl}" required  autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{halurl}" lay-verify="required"  autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item">
