--- a/src/main/resources/templates/exhibitioninfo/input2.html
+++ b/src/main/resources/templates/exhibitioninfo/input2.html
@@ -83,7 +83,7 @@
                     <div class="layui-form-item">
                         <label class="layui-form-label">审核操作</label>
                         <div class="layui-input-block">
-                            <select name="state" required  lay-verify="required" lay-filter="selectFilter">
+                            <select name="state" lay-filter="selectFilter">
                                 <option value="">请选择</option>
                                 <option value="3">审核不通过</option>
                                 <option value="1">审核通过</option>
