--- a/src/main/resources/templates/exhibitioninfo/input2.html
+++ b/src/main/resources/templates/exhibitioninfo/input2.html
@@ -110,6 +110,21 @@
             $ = layui.jquery;
 
             form.on('submit(submitFrom)', function(data){
+                console.log(JSON.stringify(data.field));
+
+                var phone = data.field.phone;
+                if(!(/^1(3|4|5|6|7|8|9)\d{9}$/.test(phone))){
+                    layer.msg('手机号码有误，请重填！',core.showtime);
+                    return false;
+                }
+
+                var mailbox = data.field.mailbox;
+                var reg = /^([a-zA-Z]|[0-9])(\w|\-)+@[a-zA-Z0-9]+\.([a-zA-Z]{2,4})$/;
+                if(!reg.test(mailbox)){
+                    layer.msg('邮箱有误，请重填！',core.showtime);
+                    return false;
+                }
+
                 var resultData = core.ajax('/platform/zsInfo/saveOrUpdate',false,'POST',data.field);
                 if(resultData!=false){
                     parent.layer.msg('操作成功',core.showtime);
